Minor edits and comments starting at line 260

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -259,9 +259,9 @@ After the formation of leaves to integrated light, it takes 30-60 days for trait
 
 ### Are traits shaped more by height or light?
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In a temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from changes in light availability. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area-based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In a temperate Acer saccharum forest, ~~within-canopy Acer saccharum exhibited greater~~LMA and $N_{area}$ were greater with height early in the growing season as a result of hydrostatic constraints on leaf morphology. Later in the growing season, LMA and $N_{area}$ continued to increase in the upper canopy, but due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016]. In addition, carbon isotope composition has also been shown to increase with height, independent of light [@cobleLightAcclimationOptimizes2015]
 
-Height-based leaf trait variation in *Quercus alba* and *Quercus velutina* showed decrease in lobation with increased height in two tall species, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus spp.
+Height-based leaf trait variation in two tall temperate species, *Quercus alba* and *Quercus velutina*, showed decreases in lobation with increased height, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus species.
 
 Height is more important than light in determining leaf morphology in a tropical forests (Cavaleri et al. 2010)
 - (Cavaleri et al. 2008) 
@@ -272,7 +272,7 @@ Height is more important than light in determining leaf morphology in a tropical
 
 ### Intra-specific variation
 
-Several studies point towards common variations and differences in leaf trait plasticity within-species and at an intra-canopy gradient which influences leaf structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Several studies point towards ~~common variations and~~differences in leaf trait plasticity within-species and at an intra-canopy gradient which influences leaf structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 *[Add something about how leaf traits along the vertical canopy profile are different than the expectation from leaf economic spectrum (LES)? Chen et al. 2020 is a good paper to help frame this . They make an important point in that paper that we may also want to make here: that the LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy - hence the importance of this review. Keenan & Niinemets 2016  will also be helpful in making this point.]--M N. Smith*
 
@@ -293,14 +293,14 @@ nocite: |
 #### Morphological traits
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that though leaf area can be a predictor for leaf temperatures ranges [$Trange$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in effective leaf width, boundary layer thickness and resistance increases along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn transpirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in determining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension is generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration, which break the entirety of leaf dimension by enhancing a smaller characteristic dimension, all facilitate more efficient heat dissipation. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006].
+Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that though leaf area can be a predictor for leaf temperature ranges [$T_{range}$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increases in effective leaf width, boundary layer thickness and resistance increase along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. This lowers evaporation from stomatal pores, and in turn transpirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance models to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in determining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension are generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration, which break the entirety of leaf dimension by enhancing a smaller characteristic dimension, all facilitate more efficient heat dissipation. Leaf lobes are deeper and leaf elongation and serration are more pronounced in sun exposed canopies than in the shaded understory~~, as well as leaf elongation and serration are more pronounced in sun exposed canopies~~ [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006].
 
 
 #### Biochemical and physiological traits
 
 ##### Carotenoids/Xanthophyll cycle pigments
 
-High light stimulates the need for photoprotection in leaves in order to protect internal photosystem II from chronic photoinhibition through enabling D1 protein replacement. Thus, leaves exposed to greater irradiance have greater pools of xanthophyll pigments expressed on a mass or area basis--photoprotective pigments comprising of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. These are found to be proportional to within-canopy light gradient at an inter- and intra-species level. Therefore, $VAZ$ is lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [@niinemetsAcclimationHighIrradiance1998]. In neotropical forest, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pool on an area or chl basis compared to low light leaves that showed greater mass based chlorophyll, lutein and neoxanthin carotenoids [Mastubara et al. 2009]
+High light stimulates the need for photoprotection in leaves in order to protect internal photosystem II from chronic photoinhibition through enabling D1 protein replacement. Thus, leaves exposed to greater irradiance have greater pools of xanthophyll pigments expressed on a mass or area basis. Xanthophylls are photoprotective pigments comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. These are found to be proportional to within-canopy light gradients at an inter- and intra-species level. Therefore, $VAZ$ is lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [@niinemetsAcclimationHighIrradiance1998]. In neotropical forests, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pools on an area or chlorophyll basis compared to low light leaves that showed greater mass-based chlorophyll, lutein and neoxanthin carotenoids [Mastubara et al. 2009]
   
 -	antioxidant scavenging function- protect against cellular damage
 - Koniger et. al. 1995, and  Matsubara et al. 2009
@@ -309,7 +309,7 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
-##### lifespan
+##### Leaf lifespan [Elsa: phenology more broadly? - leaf lifespan, fruiting, flowering links to temperature and thermal gradients?]
 ##### Deciduousness
 
 *Among species that can be deciduous, greater proportion of deciduous individuals in larger size classes (Condit et al. 2000). *
@@ -322,7 +322,7 @@ High light stimulates the need for photoprotection in leaves in order to protect
 Taller trees in dense forests tend to be exposed to greater irradiance but maintain shaded leaves in canopy interior and lower canopy, while shorter understory trees are shaded by overstory. As a result of different light regimes, a sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves
 [Rozendaal et al. 2006, Mathur et al. 2018, more REFS]."Additionally, shorter understory trees that spend the bulk of their lifecycle in the shade experience different pressures than plant that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well" -Martijn 
 
-The combination of stressors experienced by taller trees' foliage are different from that experienced by understory trees. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, higher wind speed, etc.. whereas understory leaves are subjected to shade or limitation of light, niche competition and herbivory. Overstory sun leaves are subjected to overheating pressures; thus, through developed traits of increased stomatal density, transpiration and water supply, along with increased convective heatloss via reduced boundary layer resistance, sun leaves are able to maintain optimum temperatures for photosynthesis and metabolic processes. Additionally, overstory sun leaves tend to have long-lived leaves[*double check*] with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaining larger width leaves with comparatively lower stomatal density due to low levels of photosynthesis in the shade, lesser $VPD$, and wind speed. Those differences in traits are likely to affect their thermal properties as well. Leaves act as windows to plant performance, enhancing plant adaptation to changing environment, thus leaf traits acclimated to prior stressors have been suggested to enable whole plants to respond differently to forthcoming stress [@rozendaalPlasticityLeafTraits2006; @niinemetsResponsesForestTrees2010a]
+The combination of stressors experienced by taller trees' foliage are different from that experienced by understory trees. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, higher wind speed, etc.. whereas understory leaves are subjected to shade or limitation of light, niche competition and herbivory. Overstory sun leaves are subjected to overheating pressures; thus, through developed traits of increased stomatal density, transpiration and water supply, along with increased convective heat loss via reduced boundary layer resistance, sun leaves are able to maintain optimum temperatures for photosynthesis and metabolic processes. Additionally, overstory sun leaves tend to have long-lived leaves[*double check*] with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaining larger width leaves with comparatively lower stomatal density due to low levels of photosynthesis in the shade, lesser $VPD$, and wind speed. Those differences in traits are likely to affect their thermal properties as well. Leaves act as windows to plant performance, enhancing plant adaptation to changing environment, thus leaf traits acclimated to prior stressors have been suggested to enable whole plants to respond differently to forthcoming stress [@rozendaalPlasticityLeafTraits2006; @niinemetsResponsesForestTrees2010a]
 
 However, even with distinct features of sun and shade traits, trait adaptation to light maximizes light use efficiency for photosynthesis at both high and low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorophyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, @rozendaalPlasticityLeafTraits2006]
 
@@ -341,12 +341,12 @@ Shade intolerant species experience greater heterogeneity in light during ontoge
 
 **Many of the biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
 $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`).
-Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020] 
+Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
 $T_{leaf}$  is largely a function of radiation input versus heat lost to the environment, and typically increases [with tree height] as light availability and total radiation increases [@michaletzPlantThermoregulationEnergetics2015]. 
 
 In addition, leaf size, which itself varies with height (Table `r table_leaf_traits`), impacts leaf temperature. While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed.  
 
-Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to $T_{air}$, with coolest leaves at intermediate sizes (~10mm). Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. However, counteracting this, lower wind speed in understory would reduce latent heat loss. Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance. However, increase in air temperature typically also increases VPD, decrease in stomatal conductance during midday lead to a decrease in leaf CO2, and consequently increasing leaf temperature in upper canopy [@fauset_differences_2018]. Thus, their $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
+Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to $T_{air}$, with coolest leaves at intermediate sizes (~10mm). Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. However, counteracting this, lower wind speed in understory would reduce latent heat loss. Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance. However, increases in air temperature typically also increase VPD. Resulting decreases in stomatal conductance, typically during midday, lead to a decrease in leaf CO2, and consequently increasing leaf temperature in upper canopy [@fauset_differences_2018]. Thus, $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to stomatal conductance ($g_s$), wind speed, and shortwave radiation.** Schematic produced using the tealeaves R package of @muir_tealeaves_2019. Current placeholder uses typical conditions for Harvard Forest, but model output deviates from real data (directions right, but Tleaf-Tair too high). [ISSUE #6](2020_12_draft).](leaf_energy_balance/2020_12_draft.png)
 
@@ -406,7 +406,7 @@ Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 **Photosynthesis is generally higher in sun leaves-- a fact that is well-established (Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020) and observed in numerous field studies.**
 This is primarily driven by the greater light available to sun leaves.
 
-In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation level differs between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy)
+In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy)
 The vertical gradient in photosythetic rates is also influenced by available concentration of N and P. (and water availability)
 .[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith [agreed. Again the importance of differentiating between within-species and among species trait variation. Also; steepness of the vertical gradient in light and VPD. In very tall trees a gradient in water potential might cause a gradient in stomatal limitations of net photosynthesis]
 
@@ -508,13 +508,14 @@ Still, partitioning ET into its constituent components, let alone vertically par
 [Elsa: do we want a section about research opportunities using remote sensing or is that outside the scope of this review?] 
 An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others).
 
-## Implications 
+## Implications [ & future research directions?]
 
+*Elsa: If emphsaize future research directions, could move the remote sensing opportunities to this section and frame modeling section around opportunities to use models to further explore open questions, scale these findings in space and time, and influence predictions*
 *(In this section, we consider implications of the patterns reviewed above for our understanding of the future of forests--both how we model them and what sorts of responses we can expect under climate change.)*
 
 ### Representing Vertical Gradients in Models
 
-Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity , and include offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
+Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity, including offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
 
 In general, DGVMs range from Individual Based Models (IBMs) on one end of the complexity and scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models, which include many first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales. 
 
